--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/netinfo": "^9.3.7",
     "expo-constants": "^15.0.0"
   },
   "devDependencies": {
