--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "pdfkit": "^0.13.0"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
