--- a/.env
+++ b/.env
@@ -1,18 +1,12 @@
-# Firebase
-# IMPORTANT: You must restart your dev server after changing these values.
-# These values should be placed in a .env.local file, which is not committed to git.
-NEXT_PUBLIC_FIREBASE_API_KEY="YOUR_API_KEY"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="YOUR_AUTH_DOMAIN"
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="YOUR_PROJECT_ID"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="YOUR_STORAGE_BUCKET"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="YOUR_SENDER_ID"
-NEXT_PUBLIC_FIREBASE_APP_ID="YOUR_APP_ID"
 
-# Twilio (for WhatsApp)
-# These are only needed if you want to enable WhatsApp notifications.
-TWILIO_ACCOUNT_SID="YOUR_TWILIO_ACCOUNT_SID"
-TWILIO_AUTH_TOKEN="YOUR_TWILIO_AUTH_TOKEN"
-TWILIO_WHATSAPP_FROM="whatsapp:YOUR_TWILIO_NUMBER"
-
-# Google Maps API Key (for map components)
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="YOUR_GOOGLE_MAPS_API_KEY"
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyBwWxuW3SBa7EosSesQYiWnNBzgLy6TwbQ"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="fieldopsmvp.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="fieldopsmvp"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="fieldopsmvp.firebasestorage.app"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="817213320455"
+NEXT_PUBLIC_FIREBASE_APP_ID="1:817213320455:web:dbcd0ea6cc663812b029a2"
+GEMINI_API_KEY=AIzaSyAmpEkRTAGK1LUDZ1BD9BWQeFXCB0T0aQA
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="AIzaSyCREBGgns-90BSr9qvRGcVDIgdK_QC1K4I"
+TWILIO_ACCOUNT_SID=AC5a98915ba87be1edec552686c3c17ecf
+TWILIO_AUTH_TOKEN=d137af384800e07ad5db56dd95fc1324
+TWILIO_WHATSAPP_FROM=whatsapp:+14155238886
