--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
+    "firebase-admin": "^12.3.1",
     "genkit": "^1.8.0",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
+    "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
