--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "android": "npx cap run android",
     "ios": "npx cap run ios",
     "sync:android": "npm run build && npx cap sync android",
-    "sync:ios": "npm run build && npx cap sync ios"
+    "sync:ios": "npm run build && npx cap sync ios",
+    "test": "vitest run"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.8.0",
@@ -80,6 +81,7 @@
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.0.0"
   }
 }
